added simple, unoptimized build tp grunt requirejs build

--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-	"name": "HereThereEveryWhereJS",
-	"version": "0.1.0",
-	"description": "JavaScript Mediator and Event Propogator",
-	"keywords": [
-		"events",
-		"javascript",
-		"mediator",
-		"pub/sub",
-		"observer"
-	],
-	"maintainers": [
-		{
-			"name": "Joseph Chapman",
-			"email": "info@josephchapman.com",
-			"blog": "josephchapman.com",
-			"web": "https://github.com/JoeChapman/"
-		}
-	],
-	"author": "Joseph Chapman",
-	"licenses": [
-		"MIT"
-	],
-	"repositories": [
-		{
-			"type": "git",
-			"url": "https://github.com/JoeChapman/HereThereEveryWhereJS"
-		}
-	],
-	"main": "main",
-	"devDependencies": {
-		"grunt": "~0.4.0",
-		"grunt-contrib-jshint": "~0.1.0",
-		"grunt-contrib-nodeunit": "~0.1.0",
-		"grunt-contrib-jasmine": "~0.3.0rc5",
-		"grunt-template-jasmine-requirejs": "~0.1.0",
-		"grunt-contrib-requirejs": "~0.3.4",
-		"grunt-contrib-concat": "~0.1.1"
-	},
-	"scripts": {
-		"test": "grunt jasmine"
-	}
+  "name": "HereThereEveryWhereJS",
+  "version": "0.1.0",
+  "description": "JavaScript Mediator and Event Propogator",
+  "keywords": [
+    "events",
+    "javascript",
+    "mediator",
+    "pub/sub",
+    "observer"
+  ],
+  "maintainers": [
+    {
+      "name": "Joseph Chapman",
+      "email": "info@josephchapman.com",
+      "blog": "josephchapman.com",
+      "web": "https://github.com/JoeChapman/"
+    }
+  ],
+  "author": "Joseph Chapman",
+  "licenses": [
+    "MIT"
+  ],
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/JoeChapman/HereThereEveryWhereJS"
+    }
+  ],
+  "main": "main",
+  "devDependencies": {
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "~0.1.0",
+    "grunt-contrib-nodeunit": "~0.1.0",
+    "grunt-contrib-jasmine": "~0.3.0rc5",
+    "grunt-template-jasmine-requirejs": "~0.1.0",
+    "grunt-contrib-requirejs": "~0.3.4",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-watch": "~0.3.1"
+  },
+  "scripts": {
+    "test": "grunt jasmine"
+  }
 }
