--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-template-jasmine-requirejs": "~0.1.0",
     "grunt-contrib-requirejs": "~0.3.4",
     "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-connect": "~0.1.2"
   },
   "scripts": {
     "test": "grunt jasmine"
