Added index example

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HereThereEveryWhereJS",
+  "name": "HereThereEverywhereJS",
   "version": "0.1.0",
   "description": "JavaScript Mediator and Event Propogator",
   "keywords": [
