--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "HereThereEverywhereJS",
+  "name": "Backbone.Mediator",
   "version": "0.1.0",
-  "description": "JavaScript Mediator and Event Propogator",
+  "description": "Simple JavaScript Mediator",
   "keywords": [
     "events",
     "javascript",
     "mediator",
-    "pub/sub",
-    "observer"
+    "Backbone"
   ],
   "maintainers": [
     {
@@ -24,20 +23,15 @@
   "repositories": [
     {
       "type": "git",
-      "url": "https://github.com/JoeChapman/HereThereEveryWhereJS"
+      "url": "https://github.com/JoeChapman/Backbone.Mediator"
     }
   ],
-  "main": "main",
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-jshint": "~0.1.0",
-    "grunt-contrib-nodeunit": "~0.1.0",
     "grunt-contrib-jasmine": "~0.3.0rc5",
     "grunt-template-jasmine-requirejs": "~0.1.0",
-    "grunt-contrib-requirejs": "~0.3.4",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-connect": "~0.1.2"
+    "grunt-contrib-requirejs": "~0.3.4"
   },
   "scripts": {
     "test": "grunt jasmine"
